@@ -16,6 +16,8 @@
 
 package org.springframework.boot.actuate.autoconfigure.context.properties;
 
+import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.actuate.autoconfigure.endpoint.condition.ConditionalOnAvailableEndpoint;
 import org.springframework.boot.actuate.autoconfigure.endpoint.expose.EndpointExposure;
@@ -48,8 +50,17 @@ public class ConfigurationPropertiesReportEndpointAutoConfiguration {
 	public ConfigurationPropertiesReportEndpoint configurationPropertiesReportEndpoint(
 			ConfigurationPropertiesReportEndpointProperties properties,
 			ObjectProvider<SanitizingFunction> sanitizingFunctions) {
-		return new ConfigurationPropertiesReportEndpoint(sanitizingFunctions.orderedStream().toList(),
-				properties.getShowValues());
+		ConfigurationPropertiesReportEndpoint endpoint = new ConfigurationPropertiesReportEndpoint(
+				sanitizingFunctions.orderedStream().collect(Collectors.toList()));
+		String[] keysToSanitize = properties.getKeysToSanitize();
+		if (keysToSanitize != null) {
+			endpoint.setKeysToSanitize(keysToSanitize);
+		}
+		String[] additionalKeysToSanitize = properties.getAdditionalKeysToSanitize();
+		if (additionalKeysToSanitize != null) {
+			endpoint.keysToSanitize(additionalKeysToSanitize);
+		}
+		return endpoint;
 	}
 
 	@Bean
@@ -57,10 +68,8 @@ public class ConfigurationPropertiesReportEndpointAutoConfiguration {
 	@ConditionalOnBean(ConfigurationPropertiesReportEndpoint.class)
 	@ConditionalOnAvailableEndpoint(exposure = { EndpointExposure.WEB, EndpointExposure.CLOUD_FOUNDRY })
 	public ConfigurationPropertiesReportEndpointWebExtension configurationPropertiesReportEndpointWebExtension(
-			ConfigurationPropertiesReportEndpoint configurationPropertiesReportEndpoint,
-			ConfigurationPropertiesReportEndpointProperties properties) {
-		return new ConfigurationPropertiesReportEndpointWebExtension(configurationPropertiesReportEndpoint,
-				properties.getShowValues(), properties.getRoles());
+			ConfigurationPropertiesReportEndpoint configurationPropertiesReportEndpoint) {
+		return new ConfigurationPropertiesReportEndpointWebExtension(configurationPropertiesReportEndpoint);
 	}
 
 }
