@@ -20,6 +20,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.assertj.core.api.Condition;
 import org.hamcrest.collection.IsMapContaining;
@@ -211,7 +212,7 @@ public final class Metadata {
 			List<ItemMetadata> candidates = metadata.getItems()
 				.stream()
 				.filter((item) -> item.isOfItemType(this.itemType) && name.equals(item.getName()))
-				.toList();
+				.collect(Collectors.toList());
 			if (candidates.size() > 1) {
 				throw new IllegalStateException("More than one metadata item with name '" + name + "': " + candidates);
 			}
